--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>藍海VILLA</title>
+    <meta name="description" content="">
+    <meta property="og:locale" content="zh_TW" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="藍海VILLA" />
+    <meta property="og:description" content="" />
+    <meta property="og:site_name" content="藍海VILLA" />
+    <meta name="twitter:description" content="" />
+    <meta name="twitter:title" content="藍海VILLA" />
+    <meta itemprop="name" content="藍海VILLA">
+    <meta itemprop="description" content="">
+    <meta property="og:image" content="./public/img/share.jpg" />
+    <meta property="og:url" content="./public/img/share.jpg" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
