--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <meta name="twitter:title" content="藍海VILLA" />
     <meta itemprop="name" content="藍海VILLA">
     <meta itemprop="description" content="">
-    <meta property="og:image" content="./public/img/share.jpg" />
-    <meta property="og:url" content="./public/img/share.jpg" />
+    <meta property="og:image" content="./public/img/share.png" />
+    <meta property="og:url" content="./public/img/share.png" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
