--- a/index.html
+++ b/index.html
@@ -217,19 +217,19 @@
                     <label for="">
                         <span>姓</span><span>名</span>
                     </label>
-                    <input type="text" id="name">
+                    <input type="text" id="name" required>
                 </div>
                 <div class="reserve_form_item">
                     <label for="">
                         <span>手</span><span>機</span>
                     </label>
-                    <input type="number" id="phone">
+                    <input type="number" id="phone" required>
                 </div>
                 <div class="reserve_form_item">
                     <label for="">
                         <span>E-MAIL</span>
                     </label>
-                    <input type="email" id="email">
+                    <input type="email" id="email" required>
                 </div>
             </div>
             <div class="col-md-6">
