--- a/index.html
+++ b/index.html
@@ -25,26 +25,28 @@
     <link rel="stylesheet" href="./public/css/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="./public/css/aos/aos.css">
     <link rel="stylesheet" href="./public/css/style.css">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10841953816"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10853934060"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'AW-10841953816');
+        gtag('config', 'AW-10853934060');
     </script>
+    <!-- Event snippet for 藍海villa - 1/18 conversion page In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
     <script>
         function gtag_report_conversion(url) {
-          var callback = function () {
-            if (typeof(url) != 'undefined') {
-              window.location = url;
-            }
-          };
-          gtag('event', 'conversion', {
-              'send_to': 'AW-10841953816/a_XNCOSigKYDEJis7LEo',
-              'event_callback': callback
-          });
-          return false;
+            var callback = function () {
+                if (typeof(url) != 'undefined') {
+                    window.location = url;
+                }
+            };
+            gtag('event', 'conversion', {
+                'send_to': 'AW-10841953816/tzmxCJ3BwIgYEJis7LEo',
+                'event_callback': callback
+            });
+            return false;
         }
     </script>
 </head>
