--- a/index.html
+++ b/index.html
@@ -49,6 +49,32 @@
             return false;
         }
     </script>
+    <!-- LINE Tag Base Code -->
+    <!-- Do Not Modify -->
+    <script>
+        (function(g,d,o){
+      g._ltq=g._ltq||[];g._lt=g._lt||function(){g._ltq.push(arguments)};
+      var h=location.protocol==='https:'?'https://d.line-scdn.net':'http://d.line-cdn.net';
+      var s=d.createElement('script');s.async=1;
+      s.src=o||h+'/n/line_tag/public/release/v1/lt.js';
+      var t=d.getElementsByTagName('script')[0];t.parentNode.insertBefore(s,t);
+        })(window, document);
+    _lt('init', {
+      customerType: 'lap',
+      tagId: 'eddce7d3-db59-4fee-bfdc-29af4b87e3fb'
+    });
+    _lt('send', 'pv', ['eddce7d3-db59-4fee-bfdc-29af4b87e3fb']);
+    </script>
+    <noscript>
+      <img height="1" width="1" style="display:none"
+           src="https://tr.line.me/tag.gif?c_t=lap&t_id=eddce7d3-db59-4fee-bfdc-29af4b87e3fb&e=pv&noscript=1" />
+    </noscript>
+    <!-- End LINE Tag Base Code -->
+    <script>
+        _lt('send', 'cv', {
+          type: 'CompleteReservation'
+        },['eddce7d3-db59-4fee-bfdc-29af4b87e3fb']);
+    </script>
 </head>
 <body>
     <div class="kv section">
